# cursor-pre-commit-hooks

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
hooks/: __init__.py  auto_tag.py  changelog_version.py
